<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tvPlayer1Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/player1_label"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPlayer1Score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_score"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tvPlayer1Name"
            app:layout_constraintStart_toEndOf="@+id/tvPlayer1Name"
            app:layout_constraintTop_toTopOf="@+id/tvPlayer1Name" />

        <LinearLayout
            android:id="@+id/llButtonsP1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPlayer1Name">

            <Button
                android:id="@+id/btnP1Add1"
                style="?attr/materialButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:padding="0dp"
                android:text="@string/add_1" />

            <Button
                android:id="@+id/btnP1Add3"
                style="?attr/materialButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:padding="0dp"
                android:text="@string/add_3" />

            <Button
                android:id="@+id/btnP1Add6"
                style="?attr/materialButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:padding="0dp"
                android:text="@string/add_6" />

            <Button
                android:id="@+id/btnP1Add9"
                style="?attr/materialButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:padding="0dp"
                android:text="@string/add_9" />

            <Button
                android:id="@+id/btnP1Add12"
                style="?attr/materialButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="0dp"
                android:text="@string/add_12" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvPlayer2Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/player2_label"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llButtonsP1" />

        <TextView
            android:id="@+id/tvPlayer2Score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_score"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tvPlayer2Name"
            app:layout_constraintStart_toEndOf="@+id/tvPlayer2Name"
            app:layout_constraintTop_toTopOf="@+id/tvPlayer2Name" />

        <LinearLayout
            android:id="@+id/llButtonsP2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPlayer2Name">

            <Button
                android:id="@+id/btnP2Add1"
                style="?attr/materialButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:padding="0dp"
                android:text="@string/add_1" />

            <Button
                android:id="@+id/btnP2Add3"
                style="?attr/materialButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:padding="0dp"
                android:text="@string/add_3" />

            <Button
                android:id="@+id/btnP2Add6"
                style="?attr/materialButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:padding="0dp"
                android:text="@string/add_6" />

            <Button
                android:id="@+id/btnP2Add9"
                style="?attr/materialButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:padding="0dp"
                android:text="@string/add_9" />

            <Button
                android:id="@+id/btnP2Add12"
                style="?attr/materialButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="0dp"
                android:text="@string/add_12" />
        </LinearLayout>

        <Button
            android:id="@+id/btnHistory"
            style="?attr/materialButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/btn_history"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llButtonsP2" />

        <Button
            android:id="@+id/btnReset"
            style="?attr/materialButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/btn_reset"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnHistory" />

        <Button
            android:id="@+id/btnEditNames"
            style="?attr/materialButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/btn_names"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnReset" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
