<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".EditNamesActivity">

        <TextView
            android:id="@+id/tvLabelP1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Jogador 1: "
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/etPlayer1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/etPlayer1" />

        <EditText
            android:id="@+id/etPlayer1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:hint="@string/hint_player1"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvLabelP1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLabelP2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Jogador 2: "
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/etPlayer2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/etPlayer2" />

        <EditText
            android:id="@+id/etPlayer2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_player2"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvLabelP2"
            app:layout_constraintTop_toBottomOf="@+id/etPlayer1" />

        <Button
            android:id="@+id/btnConfirm"
            style="?attr/materialButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/btn_confirm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPlayer2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
